# robotkinematics

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: rk_example.cpp
include/robotkinematics/: kinematics.h
src/: kinematics.cpp
